<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">BITLogin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">BIT LOGIN</string>
    <string name="login">登陆</string>
    <string name="setting">设置</string>
    <string name="username">账户：</string>
    <string name="password">密码：</string>
    <string name="status">状态：</string>
    <string name="logout">注销</string>
    <string name="add">添加</string>

</resources>
