<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@color/secondbar_back">


    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:background="@color/topbar">
        
        <TextView
            android:id="@+id/titleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title" 
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/title"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login" 
            android:gravity="center"
            android:textSize="20sp"/>
        <View 
            android:layout_width="1dp" 
            android:layout_height="25dp" 
            android:layout_gravity="center_vertical"
            android:background="@color/pline"/>
                      

        <TextView
            android:id="@+id/settingTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/setting" 
            android:gravity="center"
            android:textSize="20sp"/>   
    </LinearLayout>
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/topbar">
        <ImageView
            android:id="@+id/cursor"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:contentDescription="@string/app_name"
            android:scaleType="matrix"
            android:background="@color/linecolor"/>  
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/background">
        
        <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />
              
    </LinearLayout>
    
    
</LinearLayout>

