<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/username"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/topbar"/>
            <TextView 
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:background="@drawable/border"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/password"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/topbar"/>
            <TextView 
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:background="@drawable/border"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/status"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/topbar"/>
            <TextView 
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:background="@drawable/border"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/login"
                android:text="@string/login"
                android:background="@color/topbar"
                android:textColor="@color/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="30dp"/>
            <TextView 
                android:text="@string/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/linecolor"/>
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
